style.css
/* ... */
.slide__iphone2 {
    position: relative
}

.slide__iphone {
    position: relative;
    background: #f06c64;    
}

.iphone {
    position: relative;    
    display: flex;
    width: 483px;
    height: 240px;
    cursor: pointer;
}

.iphone.sceen-off .iphone_screen {
    opacity: 1;
    visibility: visible;
}

.iphone .iphone_button {
    position: absolute;
    left: 8px;
    top: 86px;
    z-index: 5;
    width: 42px;
    height: 42px;
    border-radius: 50%;    
}
.iphone .iphone_screen {
    content: '';
    position: absolute;     
    z-index: 6;
    top: 11px;
    left: 57px;
    width: 339px;
    height: 194px;   
    visibility: hidden;
    opacity: 0;
    background: #333;
}

.iphone img {
    position: absolute;
}

.iphone img.iphone_container {
    z-index: 2;
}

.iphone img.shadow {
    z-index: 0;
    opacity: 0.15;
}

.iphone img.screen {
    z-index: 3;    
    top: 11px;
    left: 57px;
    border: 3px solid #c6c6c6;
    border-radius: 2px;
}

.iphone__horizontal {
    top: 173px;
    left: 425px;
    
}

.iphone__vertical {
    transform: rotate(-90deg);
    left: -10px;
    top: -91px;
}

.iphone__vertical img.shadow {
    transform: rotateY(180deg);
    left: -25px;
}

.to-left {
    animation-name: left;
}
.to-right {
    animation-name: right;
    animation-direction: reverse;
}
.from-left {
    animation-name: left;
    animation-direction: reverse;
}
.from-right {
    animation-name: right;
}

@keyframes left {
    from {
        left: 0;
    }
    to {
        left: -100%;
    }
}

@keyframes right{
    from {
        left: 100%;
    }
    to {
        left: 0;
    }
}

.control {
    top: 50%;
    bottom: 0;
    position: absolute;
    display: inline-block;
    height: 35px;
    width: 27px; 
    transform: translateY(-50%);    
}

.control.prev {
    left: 40px;
    right: auto;
}
.control.next {
    left: auto;
    right: 40px;    
}

a.arrow {
    display: block;
    height: 27px;
    width: 27px;
    background: url(./assets/img/chev.png) 0% 50% no-repeat;
    opacity: 0.15;
}

a.arrow:hover {
    opacity: 1;
}

a.arrow-next {   
    transform: rotateY(180deg);
}

.services {
    border-bottom: 6px solid #ffffff;
}

.services__content {
    padding: 60px 0 25px;
}

.services__content .services_description {
    line-height: 1.5;
    font-size: 18px;
    font-family: 'LatoLight';
    letter-spacing: -0.07px;
    word-spacing: -1px;
    text-align: justify;
}

.services__content .layout-3-column {
    grid-template-columns: repeat(3, 3fr);
    grid-template-rows: 1fr 1fr;
    display: grid;
    grid-gap: 20px;
    padding: 25px 0;
}

.service {
    display: grid;
    grid-template-columns: 1fr 3fr;
    grid-gap: 5px;
}

.service .service__icon span.icon {
    display: flex;
    width: 59px;
    height: 59px;    
    border: 2px solid #666d89;
    border-radius: 50%;
}

.services .service__description{    
    height: 100px;
    overflow: hidden;
    margin-bottom: 3px;
}

.icon_pen {
    background: url(./assets/img/icon/pen.png) 50% no-repeat;
}

.icon_bulb {
    background: url(./assets/img/icon/bulb.png) 50% no-repeat;
}

.icon_heart {
    background: url(./assets/img/icon/heart.png) 50% no-repeat;
}

.icon_phone {
    background: url(./assets/img/icon/phone.png) 50% no-repeat;
}

.icon_bubble {
    background: url(./assets/img/icon/bubble.png) 50% no-repeat;
}

.icon_star {
    background: url(./assets/img/icon/star.png) 50% no-repeat;
}

.service  p {
    padding: 8px 0;
    font-size: 12px;
    font-family: 'Lato';
    line-height: 22px;
    text-align: justify;
    letter-spacing: -0.05px;
}

.portfolio__content,
.aboutus__content
  {
    display: grid;
    grid-template-columns: repeat(12, 1fr);
    grid-gap: 20px;
    padding: 60px 0;
    
}

nav ul {
    list-style: none;
}

.portfolio {
    display: grid;
    align-items: center;
    background-color: #2d303a;
    border-bottom: 6px solid #323746;
    color: #666d89;
}

.aboutus__content h2,
.aboutus__content .aboutus_description,
.portfolio__content h2,
.portfolio__content .portfolio_description, 
.portfolio__content .portfolio__navigation {
    grid-column: span 12;
}

.aboutus__content h2,
.portfolio__content h2,
.quote__content h2 {
    font-size: 30px;
    line-height: 1.3;
}

.portfolio__content .layout-4-column {    
    grid-column: span 12;
    grid-template-rows: repeat(3, 1fr);
    height: 610px;
    padding: 0;
    
}

.portfolio_description {
    font-size: 18px;
    font-family: "LatoLight";
    letter-spacing: -0.2px;
}

.portfolio__navigation {
    margin-top: -5px;
}

.portfolio__navigation ul {
    display: flex;
}

.portfolio__navigation ul li {
    margin-right: 10px;
}

.portfolio__navigation ul li a {
    padding: 5px 6px;    
    font-size: 12px;
    text-decoration: none;
    color: #767e9e;  
    border: 1px solid #767e9e;
    border-radius: 5px;
}

.portfolio__navigation ul li.active a, 
.portfolio__navigation ul li a:hover {
    color: #dedede;
    border: 1px solid #dedede;
}
.portfolio__item {
    display: flex;
    overflow: hidden;    
    width: 220px;
    height: 188px;    
    justify-content: center;
    align-items: center;
    position: relative;
}

picture.with-border {
    outline: 5px solid #F06C64;
}

.portfolio__item img{
    min-height: 100%;
    width: auto;
    position: absolute;
}

.portfolio__item img.ship {
    margin-top: 15px;
    margin-left: 1px;
} 

.portfolio__item img.girl {
    margin-top: 0px;
    margin-left: -10px;
} 

.portfolio__item img.gray {
    margin-top: 58px;
    margin-left: 4px;
} 

.portfolio__item img.hart {
    margin-top: 3px;
    margin-left: -3px;
} 

.portfolio__item img.rabbit {
    margin-top: 28px;
    margin-left: 1px;
} 

.portfolio__item img.sdk {
    margin-top: 0px;
    margin-left: 3px;
} 

.portfolio__item img.robo {
    margin-top: 53px;
    margin-left: 45px;
} 

.portfolio__item img.bird {
    margin-top: 13px;
    margin-left: 5px;  
} 
/* ... */

